--- a/cv/style.css
+++ b/cv/style.css
@@ -23,9 +23,7 @@ body{
     width: 70%;
     height: 1200px;
     display: flex;
-    /* padding: 50px 70px; */
     margin: 20px auto;
-    /* align-items: start; */
     border: 1px solid black;
     position: relative;
 }
@@ -42,11 +40,16 @@ body{
     font-size: 18px;
 }
 
-/* .sub */
+a{
+    text-decoration: underline;
+    color: #008CFF;
+}
+
+
+
 
 .cv-left{
     flex: 3;
-    /* height: 100%; */
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -122,7 +125,6 @@ body{
     flex: 2;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     gap: 35px;
     height: 100%;
     padding-top: 50px;
@@ -188,24 +190,21 @@ body{
 }
 
 body{
-    width: 1300px;
-    height: 1700px;
+    width: 900px;
+    height: 1500px;
     line-height: 1.5;
     font-size: 16px;
     font-family: "Oswald", sans-serif;
-    /* padding: 80px; */
     display: flex;
     justify-content: center;
     align-items: center;}
 
 
 #cv{
-    width: 70%;
-    height: 1500px;
+    width: 80%;
+    height: 1400px;
     display: flex;
-    /* padding: 50px 70px; */
     margin: 20px auto;
-    /* align-items: start; */
     border: 1px solid black;
     position: relative;
 }
@@ -222,12 +221,15 @@ body{
     font-size: 18px;
 }
 
+a{
+    text-decoration: underline;
+    color: #008CFF;
+}
+
 /* .sub */
 
 .cv-left{
     flex: 1;
-    /* width: 50%; */
-    /* height: 100%; */
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -303,7 +305,6 @@ body{
     flex: 1;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
     gap: 35px;
     height: 100%;
     padding-top: 50px;
